fix layout for tooltips (proper scrollbars)
Former-commit-id: c2333e291ad9205cfaf5d8f5ee12edf0fae321d3

--- a/TermGenie/TermGenieJQuery/src/main/webapp/css/TermGenie.css
+++ b/TermGenie/TermGenieJQuery/src/main/webapp/css/TermGenie.css
@@ -81,6 +81,8 @@ h1 {
 .term-description-content {
 	overflow: auto;
 	margin: 5px;
+	height: 95%;
+	width: 95%;
 }
 
 .term-description-content .termgenie-layout-table td{
